--- a/index.html
+++ b/index.html
@@ -33,77 +33,8 @@ title: Mariner's Crest Boat Club
     {% endif %}
     <h3>{{ section.title }}</h3>
   </div>
-
-  {% if section.intro %}
   <div class="section-body">
-    <p>{{ section.intro }}</p>
+    {{ section.content }}
   </div>
-  {% endif %}
-
-  {% if section.cards %}
-  <div class="grid">
-    {% for card in section.cards %}
-    <article class="tile">
-      <h4>{{ card.title }}</h4>
-      <p>{{ card.body }}</p>
-    </article>
-    {% endfor %}
-  </div>
-  {% endif %}
-
-  {% if section.fleet %}
-  <div class="fleet">
-    {% for item in section.fleet %}
-    <div>
-      <h4>{{ item.title }}</h4>
-      <p>{{ item.body }}</p>
-    </div>
-    {% endfor %}
-  </div>
-  {% endif %}
-
-  {% if section.pricing %}
-  <div class="pricing">
-    {% for plan in section.pricing %}
-    <div class="price-card{% if plan.featured %} featured{% endif %}">
-      <h4>{{ plan.name }}</h4>
-      <p class="price">{{ plan.price }} <span>{{ plan.term }}</span></p>
-      <ul>
-        {% for item in plan.features %}
-        <li>{{ item }}</li>
-        {% endfor %}
-      </ul>
-      {% if plan.cta %}
-      <a class="btn{% if plan.ghost %} ghost{% endif %}" href="{{ plan.cta_url | relative_url }}">{{ plan.cta }}</a>
-      {% endif %}
-    </div>
-    {% endfor %}
-  </div>
-  {% endif %}
-
-  {% if section.timeline %}
-  <div class="timeline">
-    {% for event in section.timeline %}
-    <div class="timeline-item">
-      <p class="timeline-date">{{ event.date }}</p>
-      <p class="timeline-title">{{ event.title }}</p>
-      <p>{{ event.body }}</p>
-    </div>
-    {% endfor %}
-  </div>
-  {% endif %}
-
-  {% if section.cta %}
-  <div class="cta">
-    <div>
-      <p>{{ section.cta.body }}</p>
-    </div>
-    <div class="cta-actions">
-      {% for action in section.cta.actions %}
-      <a class="btn{% if action.ghost %} ghost{% endif %}" href="{{ action.url }}">{{ action.label }}</a>
-      {% endfor %}
-    </div>
-  </div>
-  {% endif %}
 </section>
 {% endfor %}
